@@ -1,3 +1,10 @@
+2001-01-04  John Harper  <jsh@eazel.com>
+
+	* events.c (map_request): be sure to map the frame (if
+	appropriate) _before_ calling the map-notify-hook. Otherwise X
+	errors can result from code thinking the frame is visible when
+	it isn't yet. Fixes bug 5243 (shaded windows die on restart)
+
 2001-01-02  John Harper  <jsh@eazel.com>
 
 	* images.c (Fcomposite_images): fixed bugs in both gdk-pixbuf
