@@ -1,3 +1,9 @@
+2001-01-05  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/state/shading.jl (shading-add-window): don't need
+	to call shade-window, just set hide-client property when
+	necessary
+
 2001-01-04  John Harper  <jsh@eazel.com>
 
 	* sawfish/wm/workspace.jl: don't include hide-client in the
